<resources>
    <string name="app_name">Atividade_03</string>
    <string name="abrir_menu">Abrir Menu</string>
    <string name="fechar_menu">Fechar Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1_per_odo">1º Período</string>
    <string name="_2_per_odo">2º Período</string>
    <string name="_3_per_odo">3º Período</string>
    <string name="_4_per_odo">4º Período</string>
    <string name="_5_per_odo">5º Período</string>
    <string name="_6_per_odo">6º Período</string>
    <string name="fundamentos_de_redes_de_computadores">Fundamentos de Redes de Computadores</string>
    <string name="inform_tica_instrumental">Informática Instrumental</string>
    <string name="ingl_s_t_cnico">Inglês Técnico</string>
    <string name="introdu_o_computa_o">Introdução À Computação</string>
    <string name="introdu_o_l_gica">Introdução À Lógica</string>
    <string name="tend_ncias_tecnol_gicas_para_o_mercado_de_ti">Tendências Tecnológicas Para O Mercado de TI</string>
    <string name="programa_o_para_web_ii">Programação Para Web II</string>
    <string name="projeto_de_interface_web">Projeto de Interface Web</string>
    <string name="projeto_de_sistemas">Projeto de Sistemas</string>
    <string name="sistemas_distribu_dos_e_soa">Sistemas Distribuídos e SOA</string>
    <string name="testes_de_software">Testes de Software</string>
    <string name="administra_o_de_banco_de_dados">Administração de Banco de Dados</string>
    <string name="infraestrutura_para_sistemas_web">Infraestrutura Para Sistemas Web</string>
    <string name="metodologias_de_desenvolvimento">Metodologias de Desenvolvimento</string>
    <string name="novas_tecnologias_em_bd">Novas Tecnologias em BD</string>
    <string name="programa_o_para_dispositivos_m_veis_i">Programação Para Dispositivos Móveis I</string>
    <string name="seguran_a_de_sistemas">Segurança de Sistemas</string>
    <string name="an_lise_de_sistemas">Análise de Sistemas</string>
    <string name="fundamentos_e_projeto_de_banco_de_dados">Fundamentos e Projeto de Banco de Dados</string>
    <string name="introdu_o_programa_o">Introdução À Programação</string>
    <string name="programa_o_b_sica_para_web">Programação Básica Para Web</string>
    <string name="programa_o_orientada_objetos">Programação Orientada À Objetos</string>
    <string name="ger_ncia_de_configura_o">Gerência de Configuração</string>
    <string name="novas_tecnologias_em_desenvolvimento_para_web">Novas Tecnologias em Desenvolvimento Para Web</string>
    <string name="padr_es_de_projeto">Padrões de Projeto</string>
    <string name="programa_o_para_dispositivos_m_veis_ii">Programação Para Dispositivos Móveis II</string>
    <string name="administra_o_de_sistemas_propriet_rios">Administração de Sistemas Proprietários</string>
    <string name="gerenciamento_de_dados_para_web">Gerenciamento de Dados Para Web</string>
    <string name="introdu_o_conectividade">Introdução À Conectividade</string>
    <string name="programa_o_para_banco_de_dados">Programação Para Banco de Dados</string>
    <string name="programa_o_para_web_designers">Programação Para Web Designers</string>
    <string name="programa_o_para_web_i">Programação Para Web I</string>
    <string name="disciplinas">Disciplinas</string>
</resources>