<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_primeiro_periodo"
            android:title="@string/_1_per_odo"
            />
        <item
            android:id="@+id/nav_segundo_periodo"
            android:title="@string/_2_per_odo" />
        <item
            android:id="@+id/nav_terceiro_periodo"
            android:title="@string/_3_per_odo" />
        <item
            android:id="@+id/nav_quarto_periodo"
            android:title="@string/_4_per_odo" />
        <item
            android:id="@+id/nav_quinto_periodo"
            android:title="@string/_5_per_odo" />
        <item
            android:id="@+id/nav_sexto_periodo"
            android:title="@string/_6_per_odo" />
    </group>

</menu>
